# CECS530-SpeculativeDecoding-MultiTokenPipelines

./: README.md  pyproject.toml
prompts/: sample.txt
scripts/: run_demo.sh
src/fresh_specdecode/: __init__.py  cli.py  config.py  metrics.py  models.py  utils.py
src/fresh_specdecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fresh_specdecode/decoders/: __init__.py  baseline.py  pipeline.py  speculative.py
tests/: test_speculative_helpers.py
